headflow Done with static pages

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+	<h1>Introduce ED's Friends Contact</h1>
+    <p>
+      Plz feel free to contact us.</a>
+    </p>
+
