--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+    <h1>Introduce ED's Friends Home</h1>
+    <p>
+      This is the home page for the
+      <a href="http://www.dreamkit.net">Dreamkit</a>.
+    </p>
