Finished layout and routes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-    <h1>Introduce ED's Friends Home</h1>
-    <p>
-      This is the home page for the
-      <a href="http://www.dreamkit.net">Dreamkit</a>.
-    </p>
+<h1>Introduce ED's Friends Home</h1>
+<p>
+This is the home page for the
+<a href="http://www.dreamkit.net">Dreamkit</a>.
+</p>
+<%= link_to "Sign up! right now!!", signup_path, :class => "signup_button round" %>
